--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* * {
+    border: 2px solid red;
+} */
+
 body {
     padding: 0;
     margin: 0;
@@ -7,15 +11,83 @@ body {
 }
 
 .header, .hero-section, .information-section, .quote-section, .footer {
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 300px;
+    padding-right: 300px;
+}
+
+.header, .hero-section, .footer {
+    background-color: #1f2937;
+    display: flex;
+    
+    align-items: center;
 }
 
 .header {
-    background-color: #1f2937;
-    display: flex;
     justify-content: space-between;
+}
+
+.hero-section {
+    justify-content: center;
+    padding-top: 75px;
+    padding-bottom: 75px;
     align-items: center;
+    gap: 16px;
+}
+
+.hero-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-self: flex-start;
+}
+
+.hero-main {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+}
+
+.hero-subtext {
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+}
+
+.hero-button {
+    background-color: #3882f6;
+    border-radius: 4px;
+    color: #e5e7eb;
+    width: 25%;
+    height: 10%;
+    padding: 8px 12px;
+    margin-top: 4px;
+    flex: auto;
+    border-style: solid;
+    border: none;
+    font-weight: 500;
+}
+
+.hero-subtext, .header-links, .hero-img {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.hero-img-box {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    background-color: #666b73;
+}
+
+.hero-img {
+    text-align: center;
+    vertical-align: middle; 
+    color: white;
 }
 
 .logo {
@@ -29,12 +101,80 @@ body {
     list-style-type: none;
     gap: 16px;
     flex-shrink: 0;
-    font-size: 18px;
-    color: #e5e7eb;
     padding: 0;
     margin: 0;
 }
 
 li {
     font-size: 18px;
+}
+
+.information-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    padding-top: 32px;
+    padding-bottom: 32px;
+    gap: 32px;
+}
+
+.information-title {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1f2937;
+    margin: 0;
+}
+
+.card-container {
+    flex: 1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-text {
+    text-align: center;
+}
+
+.card-image {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #3882f6;
+    border-radius: 16px;
+}
+
+.quote-section {
+    background-color: #e5e7eb;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-text {
+    margin: 0;
+}
+
+.cta-container {
+    background-color: #3882f6;
+}
+
+.cta-button {
+    border: 1px solid #f9faf8;
+    background-color: #3882f6;
+    color: #f9faf8;
+    padding: 8px 32px;
+    border-radius: 8px;
 }
